[package]
name = "deso-sdk"
version = "0.1.0"
authors = ["Spatium Stories spatium.nfts@gmail.com"]
edition = "2021"
description = "A Rust SDK for Using the Deso Blockchain"
license = "MIT"
repository = "https://github.com/spatiumstories/deso-rust"
readme = "README.md"
documentation = "https://docs.rs/deso"
keywords = ["blockchain", "deso", "decentralized"]
categories = ["blockchain", "social media"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.5.1"
rust-crypto = "0.2.36"
crypto_box = "0.7.2"
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
secp256k1 = { version = "0.22.1", features = ["rand-std", "bitcoin_hashes", "global-context"] }
serde = { version = "1.0.201", features = ["derive"] }
thiserror = "1.0.60"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "stream", "json", "multipart"] }
dotenv = "0.15.0"
serde_json = "1.0.117"
tokio-test = "0.4.4"
bitcoin_hashes = "0.10.0"
hex = "0.4.3"
